--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,12 +1,13 @@
 workflows:
   android-workflow:
     name: Build Android APK
-    max_build_duration: 15
+    max_build_duration: 10
     environment:
       vars:
-        FIREBASE_URL: "https://novaticker-default-rtdb.firebaseio.com/"
+        JAVA_HOME: /opt/android-sdk/linux
     scripts:
+      - chmod +x gradlew
       - echo "🔧 APK 빌드 준비 중입니다."
       - ./gradlew assembleDebug
     artifacts:
-      - app/build/outputs/apk/debug/app-debug.apk
+      - app/build/outputs/**/*.apk
