--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,13 +1,21 @@
 workflows:
   android-workflow:
     name: Build Android APK
-    max_build_duration: 10
+    max_build_duration: 15
     environment:
       vars:
-        JAVA_HOME: /opt/android-sdk/linux
+        PACKAGE_NAME: "com.example.novaticker"
+      android_signing:
+        - keystore_reference
+      groups:
+        - android_credentials
+      java: 17
     scripts:
-      - chmod +x gradlew
-      - echo "🔧 APK 빌드 준비 중입니다."
-      - ./gradlew assembleDebug
+      - name: Build APK
+        script: ./gradlew assembleDebug
     artifacts:
       - app/build/outputs/**/*.apk
+    publishing:
+      email:
+        recipients:
+          - your-email@example.com
